Unreadable text fixes Fixed unreadable text on background Centered table columns Adjusted eliminated survivor colors

--- a/survive/static/survive/site.css
+++ b/survive/static/survive/site.css
@@ -4,6 +4,12 @@
     background-size: 250px 250px;
 }
 
+.background-readable {
+    background-color:#67d4e9;
+    display: inline-block;
+    padding: 5px;
+}
+
 .message {
     font-weight: 600;
     color: blue;
@@ -23,8 +29,8 @@ input[name=message] {
 
 .team_list th,
 .team_list td {
-    text-align: left;
-    padding-right: 15px;
+    text-align: center;
+    padding-right: 2px;
     border: 1px solid black;
 }
 
@@ -35,9 +41,8 @@ input[name=message] {
 
 .survivor_list th,
 .survivor_list td {
-    text-align: left;
-    
-    padding: 2px 15px 2px 5px;
+    text-align: center;
+    padding: 2px 5px;
     border: 1px solid black;
 }
 
@@ -69,6 +74,30 @@ input[name=message] {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
+.points_table {
+    width: 100%;
+}
+
+.points_table td {
+    border: 0px;
+    padding: 2px;
+}
+
+.points_table .points_table_left {
+    width: 33%;
+}
+
+.points_table .points_table_center {
+    text-align: center;
+    padding: 2px 0px;
+    width: 33%;
+}
+
+.points_table .points_table_right {
+    text-align: center;
+    width: 33%;
+}
+
 .tooltip {
     display: inline;
     border-bottom: 1px dashed #000;
@@ -77,7 +106,7 @@ input[name=message] {
 
 .eliminated_survivor {
     color: black;
-    background-color: #67d4e9;     
+    background-color: grey;     
 }
 
 .surviving_survivor {
